--- a/utils/register.html
+++ b/utils/register.html
@@ -62,7 +62,7 @@
         <button class = "nav-button" id = "nav-button-previous3">Previous</button>
 
     </div>
-
+    <script src = "cypher.js" defer></script>
     <script src="keys.js" defer></script>
     <script src="register.js" deref></script>
 </body>
