--- a/utils/login.html
+++ b/utils/login.html
@@ -14,6 +14,8 @@
         <input class = "password-input" id = "login-password-input" type = "password" placeholder="Password"></input>
         <button id = "login-button">Login</button>
     </div>
+    <div id = forgot-password-button>Forgot password?</div>
+    <script src = "cypher.js" defer></script>
     <script src="login.js" deref></script>
 </body>
 </html>
