--- a/utils/register.html
+++ b/utils/register.html
@@ -10,9 +10,14 @@
     <script src="lib/qrcode.min.js"></script>
 </head>
 <body>
+       <div id="openTabButton">
+        <img src = "../assets/newtab-24.png" id = "new-tab-img">
+    </div>
     <div id="app-password">
         <input class = "password-input" id = "password" type = "password" placeholder="Password"></input>
         <input class = "password-input" id = "confirm-password" type = "password" placeholder="Confirm password"></input>
+        <button id = "to-login-button">To login</button>
+        <button id = "to-recover-button">Import from phrase</button>
         <button class = "nav-button" id = "nav-button-next1">Next</button>
     </div>
     <div id="app-phrase" class = "hidden">
