--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,16 +5,7 @@
   </head>
 
   <body>
-    <div id="popup-content">
-      <button>Frog</button>
-    </div>
-    <div id="error-content" class="hidden">
-      <p>Can't beastify this web page.</p>
-      <p>Try a different page.</p>
-    </div>
-    <div>
-      <input id = "hui" type="button" value="NEXT">
-    </div>
     <script src="popup.js"></script>
+    <script src="../utils/cypher.js"></script>
   </body>
 </html>
