Some minor fixes

--- a/utils/home.html
+++ b/utils/home.html
@@ -161,6 +161,7 @@
             <img class="footer-button-img" src = "../assets/settings.png">
         </button>
     </div>
+    <script src="error.js" defer></script>
     <script src="fetchRecentBalances.js" defer></script>
     <script src="smartContractDeploy.js" defer></script>
     <script src="sendTransaction.js" defer></script>
