--- a/utils/login.html
+++ b/utils/login.html
@@ -24,5 +24,6 @@
     </div>
     <script src = "cypher.js" defer></script>
     <script src="login.js" deref></script>
+    <script src = "error.js" defer></script>
 </body>
 </html>
