--- a/utils/recover.html
+++ b/utils/recover.html
@@ -50,5 +50,6 @@
     <script src = "cypher.js"></script>
     <script src = "keys.js"></script>
     <script src = "recover.js"></script>
+    <script src = "error.js" defer></script>
 </body>
 </html>
