--- a/utils/register.html
+++ b/utils/register.html
@@ -76,6 +76,7 @@
     </div>
     <script src = "cypher.js" defer></script>
     <script src = "keys.js" defer></script>
+    <script src = "error.js" defer></script>
     <script src = "register.js" deref></script>
 </body>
 </html>
