--- a/pwa/circuitwalletpwa/www/recover.html
+++ b/pwa/circuitwalletpwa/www/recover.html
@@ -10,9 +10,9 @@
     <script src="lib/qrcode.min.js"></script>
 </head>
 <body>
-    <div id="openTabButton">
+    <!-- <div id="openTabButton">
         <img src = "../assets/newtab-24.png" id = "new-tab-img">
-    </div>
+    </div> -->
     <div class="center-logo">
         <img src = "../assets/logo.png"> CircuitWallet
     </div>
@@ -35,10 +35,10 @@
             <input class="phrase-container row3 column4" value = "basic" type="text"></input>
         </div>
         <div class="password-container">
-            <label class = "password-info">New password</label>
+            <!-- <label class = "password-info">New password</label>
             <input class = "password-input" id = "password" type = "password" placeholder="Password"></input>
             <label class = "password-info">Confirm new password</label>
-            <input class = "password-input" id = "confirm-password" type = "password" placeholder="Confirm password"></input>
+            <input class = "password-input" id = "confirm-password" type = "password" placeholder="Confirm password"></input> -->
             <button id = "confirm-new-password-button">Proceed</button>
             <button id = "to-register-button">To register</button>
         </div>
