--- a/pwa/circuitwalletpwa/www/index.html
+++ b/pwa/circuitwalletpwa/www/index.html
@@ -12,9 +12,7 @@
 </head>
 <body>
     <div id="app-password">
-        <input class = "password-input" id = "password" type = "password" placeholder="Password"></input>
-        <input class = "password-input" id = "confirm-password" type = "password" placeholder="Confirm password"></input>
-
+        <label class="info-label">Create new wallet</label>
         <button class = "nav-button" id = "nav-button-next1">Next</button>
 
         <button id = "to-recover-button">Import from phrase</button>
